# HelloQuest

./: README.md  build.gradle.kts  settings.gradle
app/: AndroidManifest.xml  CMakeLists.txt
app/cpp/: CMakeLists.txt  HelloQuest.h  app_engine.cpp  app_engine.h  debug.h  main.cpp  render_scene.cpp  teapot.cpp
app/cpp/common/: util_texture.c  xr_linear.h
